force-app/main/default/objects/Cruise_Booking__c/Cruise_Booking__c.object-meta.xml
<CustomObject>
    <label>Cruise Booking</label>
    <nameField>
        <displayFormat>CBID-{0000000000}</displayFormat>
        <label>CBID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cruise Bookings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>