force-app/main/default/objects/Cruise_Booking__c/fields/AdditionalIncome__c.field-meta.xml
<CustomField>
    <fullName>AdditionalIncome__c</fullName>
    <label>AdditionalIncome</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>