force-app/main/default/objects/Cruise_Booking__c/fields/Capacity_Chart__c.field-meta.xml
<CustomField>
    <fullName>Capacity_Chart__c</fullName>
    <formula>IF( Total_Passenger__c &lt; Total_Room_Capacity__c , IMAGE(&quot;/resource/1660590910000/grey?&quot;,&quot;gray&quot;,18,2) &amp;
IMAGE(&quot;/resource/1660590879000/green?&quot;,&quot;green&quot;,18,(Total_Passenger__c /Total_Room_Capacity__c )*200)&amp;
IMAGE(&quot;/resource/1660590910000/grey?&quot;,&quot;gray&quot;,18,(1-(Total_Passenger__c /Total_Room_Capacity__c ))*200)&amp;
IMAGE(&quot;/resource/1660590910000/grey?&quot;,&quot;gray&quot;,18,2), &quot;🔴&quot;









)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Capacity Chart</label>
    <type>Text</type>
</CustomField>