force-app/main/default/objects/Cruise_Booking__c/fields/Check_in__c.field-meta.xml
<CustomField>
    <fullName>Check_in__c</fullName>
    <label>Check in</label>
    <type>Date</type>
</CustomField>