force-app/main/default/objects/Cruise_Booking__c/fields/Helicopters__c.field-meta.xml
<CustomField>
    <fullName>Helicopters__c</fullName>
    <label>Helicopters</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Route__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Helicopter1</fullName>
            </value>
            <value>
                <fullName>Helicopter2</fullName>
            </value>
            <value>
                <fullName>Helicopter3</fullName>
            </value>
            <value>
                <fullName>Helicopter4</fullName>
            </value>
            <value>
                <fullName>Helicopter5</fullName>
            </value>
            <value>
                <fullName>Helicopter6</fullName>
            </value>
            <value>
                <fullName>Helicopter7</fullName>
            </value>
            <value>
                <fullName>Helicopter8</fullName>
            </value>
            <value>
                <fullName>Helicopter9</fullName>
            </value>
            <value>
                <fullName>Helicopter10</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>