force-app/main/default/objects/Cruise_Booking__c/fields/isMedicDeclared__c.field-meta.xml
<CustomField>
    <fullName>isMedicDeclared__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isMedicDeclared</label>
    <type>Checkbox</type>
</CustomField>