force-app/main/default/objects/Cruise_Booking__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Cruise Bookings</relationshipLabel>
    <relationshipName>Cruise_Bookings</relationshipName>
    <type>Lookup</type>
</CustomField>