force-app/main/default/objects/Cruise_Booking__c/fields/Route__c.field-meta.xml
<CustomField>
    <fullName>Route__c</fullName>
    <label>Route</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ensenada</fullName>
            </value>
            <value>
                <fullName>Catalina</fullName>
            </value>
            <value>
                <fullName>Canada</fullName>
            </value>
            <value>
                <fullName>Cyrpus</fullName>
            </value>
            <value>
                <fullName>Bahamas</fullName>
            </value>
            <value>
                <fullName>Maldives</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>