force-app/main/default/objects/Cruise_Booking__c/fields/Total_Passenger__c.field-meta.xml
<CustomField>
    <fullName>Total_Passenger__c</fullName>
    <label>Total Passenger</label>
    <summaryForeignKey>Passenger__c.Cruise_Booking__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>