force-app/main/default/objects/Cruise_Booking__c/fields/Total_Room_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Total_Room_Capacity__c</fullName>
    <label>Total Room Capacity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>