force-app/main/default/objects/Cruise_Booking__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Check_in__c</columns>
    <columns>Check_out__c</columns>
    <columns>Contact__c</columns>
    <columns>Route__c</columns>
    <columns>Status__c</columns>
    <columns>Week__c</columns>
    <columns>Capacity_Chart__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>